# tinySSB

./: .gitignore  LICENSE  README.md
android/: README.md
android/tinySSB/: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
android/tinySSB/app/: .gitignore  build.gradle
android/tinySSB/app/src/main/cpp/: CMakeLists.txt
android/tremola4chrome/: README.md  board.js  tremola.css  tremola.html  tremola.js  tremola_ui.js  user_carol.html  virtual-backend.js
android/tremola4chrome/src/: tremola_ui.js
esp32/loramesh/: Makefile  loramesh.h  loramesh.ino  start_on_linux.md
esp32/loramesh-TBeam/: .gitignore  ArduinoNVS.cpp  ArduinoNVS.h  Makefile  README.md  bipf.cpp  bipf.h  cmd.h  config.cpp  config.h  device.h  dmx.cpp  goset.cpp  heatmap.h  hw_setup.h  io.cpp  io.h  loramesh-TBeam.h  loramesh-TBeam.ino  mgmt.h  my_nvs.h  node.h  partitions-2.5M.csv  partitions-6.5M.csv  partitions-heltec.csv  partitions.csv  peers.h  replica.cpp  replica.h  repo.cpp  status.cpp  status.h  util.h
esp32/loramesh-TDeck/: Makefile  README.md  app_tva.cpp  app_tva.h  bipf.h  cmd.h  config-tSSB.cpp  config-tSSB.h  config.h  device.h  dmx.cpp  dmx.h  goset.cpp  goset.h  hw_setup.h  io.cpp  io.h  loramesh-TDeck.h  loramesh-TDeck.ino  node.h  partitions-tdeck.csv  partitions-tdeck.csv-as-extracted  peers.cpp  replica.cpp  replica.h  repo.cpp  sched.cpp  sched.h  ui_setup.h
esp32/loramesh-TDeck/3D/: README.md  enhanced-shell.step  enhanced-shell.stl
esp32/loramesh-TDeck/old/: app_tva.cpp  app_tva.h  bipf.cpp  config-tSSB.cpp  device.h  io.cpp  peers.cpp  ui.cpp
esp32/loramesh-TDeck/src/: chat.c  chat.xcf  const-tdeck.h  const-twrist.h  contacts.c  contacts.xcf  export-howto.txt  haze0.c  haze1.c  haze2.c  menu.xcf  signal.c  signal.xcf  signal_btn.c  signal_btn.xcf  signal_btn_checked.c  splash.c  square.xcf  tab_left.xcf  tremola-tssb-splash.xcf  ui-tbeam.cpp  ui-tdeck.cpp  ui-tdeck.h  ui-twrist.cpp  ui-twrist.h
esp32/loramesh-TWrist/: .gitignore  Makefile  README.md  app_tva.cpp  app_tva.h  config.h  device.h  dmx.cpp  dmx.h  goset.cpp  goset.h  hw_setup.h  io.cpp  loramesh-TWrist.h  loramesh-TWrist.ino  partitions-twrist.csv  peers.cpp  peers.h  replica.h  repo.cpp  sched.cpp  ui.h  util.h
esp32/loramesh-TWrist/src/: cmd.h  config.h  device.h  hw_setup.h  io.cpp  io.h  lib  loramesh-TWrist.h  node.h  partitions-tdeck.csv  peers.cpp  replica.cpp  repo.h  scuttleshell.h  ui-tdeck.cpp  ui-twrist.cpp  ui.h
esp32/loramesh/assets/: partitions-heltec.csv  partitions-tbeam.csv
esp32/loramesh/lib/: README.md
esp32/loramesh/src/: const-heltec.h  const-t5gray.h  const-tbeam.h  const-twrist.h  hardware.cpp  hardware.h  ui-heltec.cpp  (+15 more)
esp32/tests/: Makefile  tests.ino
esp32/tinySSBlib/: app_tva.cpp  bipf.cpp  bipf.h  cmd.cpp  cmd.h  config-tSSB.cpp  config-tSSB.h  config_wifi_web.cpp  config_wifi_web.h  const.h  device.h  dmx.cpp  dmx.h  ed25519.h  goset.cpp  goset.h  inflate.h  io.cpp  io.h  io_buf.cpp  io_buf.h  kiss.h  la_wifi_web.cpp  la_wifi_web.h  node.h  peers.cpp  peers.h  replica.cpp  replica.h  replica.h_  repo.cpp  repo.h  sched.cpp  sched.h  tinySSBlib.h  ui.cpp  ui.h  util.cpp
py/: README.md
py/simplechat/: .gitignore  LICENSE  README.md  frontier.py  simplechat.py  spub.py
py/simplepub/: README.md  frontier.py  spub.py  start.sh
rs/: Cargo.toml  Makefile  README.md
rs/src/: android_glue.rs  chat_node.rs  lib.rs  main.rs
(+244 files in other folders)
