[package]
name = "iroh-kotlin-bridge"
version = "0.2.0"
edition = "2021"
# default-run = "cli"

[[bin]]
name = "cli"
path = "src/main.rs"

[lib]
name = "iroh_kotlin_bridge"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
async-channel = "2.3.1"
async-compat = "0.2"
iroh = { version = "0.90", default-features = false }
n0-future = "0.1.2"
serde = "1.0.217"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.17", default-features = false, features = ["sync"] }
tracing = "0.1.40"
clap = "4.5.30"  # Make sure you're using the right version
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sha2 = "0.10"
hex = "0.4"
once_cell = "1.18"
serde_json = "1.0"
log = "0.4"
android_logger = "0.13"
jni = "0.21"
base64 = "0.21"